<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="ControllerState" Id="{807775c5-1a7b-4f15-a7de-7f752c544cb4}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE ControllerState :
(
	init 			:= 0,
	idle			:= 1,
	calcTrajectory 	:= 2,
	ready			:= 3,
	driving			:= 4
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>